force-app/main/default/objects/IntegrationLog__c/IntegrationLog__c.object-meta.xml
<CustomObject>
    <label>IntegrationLog</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IntegrationLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>