force-app/main/default/objects/IntegrationLog__c/fields/MessageError__c.field-meta.xml
<CustomField>
    <fullName>MessageError__c</fullName>
    <label>Message Error</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>