force-app/main/default/objects/IntegrationLog__c/fields/PayloadIN__c.field-meta.xml
<CustomField>
    <fullName>PayloadIN__c</fullName>
    <label>Payload IN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>