force-app/main/default/objects/IntegrationLog__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>